# University_database

./: data.py  database.sql  prepare.sh  pyproject.toml  user_fixture.sql
