[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Hosna83 <rasihosna68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^33.3.0"
ptpython = "^3.0.29"
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
